# Volumetrics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: whythefuck.shader
res/models/: READ_ME.md  cube.glb
res/models/gltf2/: fortune_teller_table.glb
res/shaders/: Basic.shader  Ground.shader  Line.shader  Skybox.shader  WaterSurface.shader  WorldObject.shader  line.fs  line.vs  skybox.fs  skybox.vs  sun.fs  sun.shader  sun.vs  test_shader.shader
res/shaders/VoxelShaders/: VoxelDebug.fs  VoxelDebug.shader  VoxelDebug.vs
res/shaders/core/: default_ground.fs  default_ground.shader  default_ground.vs  default_shader.fs  default_shader.vs  world_object.fs  world_object.vs
res/shaders/glass/: glass.fs  glass.vs
res/shaders/pipeline/: composite.fs  composite.vs  copy_present.fs  shadow_depth.fs  shadow_depth.vs
res/shaders/raymarching/: raymarcher.fs  raymarcher.shader  raymarcher.vs  raymarcher_blend.shader  volumetric_marcher.shader
src/: OBJLoader.cpp  OBJLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
src/Utils/: InputHandler.hpp  perlin_noise_generator.hpp
src/VoxelPlayground/: Camera.cpp  Camera.h  Skybox.cpp  Space.cpp  Space.h
src/VoxelPlayground/Volumetrics/: VoxelStructure.cpp  VoxelStructure.h
src/VoxelPlayground/raymarcher/: raymarcher.cpp  raymarcher.hpp  rayscene.cpp  rayscene.hpp
src/VoxelPlayground/water/: WaterSurface.cpp  WaterSurface.hpp
src/app/: Application.cpp  Application.hpp
src/core/: Base.cpp  Base.hpp  BaseObject.cpp  BaseObject.hpp  Camera.cpp  Camera.h  Camera.hpp  Line.cpp  Line.hpp  LoadTGA.cpp  LoadTGA.hpp  OBJLoader.cpp  OBJLoader.hpp  Space.cpp  Space.h  Space.hpp  UUID.cpp  UUID.hpp  WorldObject.cpp  WorldObject.h  WorldObject.hpp
src/core/rendering/: Model.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.h  Texture.hpp
src/core/resources/: Resource.hpp  ResourceManager.cpp  ResourceManager.hpp
src/core/resources/adapters/: ModelAdapter.cpp  ModelAdapter.hpp  ShaderAdapter.cpp  ShaderAdapter.hpp
src/core/space/: Light.hpp  LightManager.cpp  LightManager.hpp  Object.cpp  Object.hpp  Space.cpp  Space.hpp
src/core/ui/: ui_dumptruck.cpp  ui_dumptruck.hpp
src/core/utils/: ButtonMap.hpp  ModelGenerator.hpp  perlin_noise_generator.hpp  uuid.cpp  uuid.hpp
src/feature/: Skybox.cpp  Skybox.h  Skybox.hpp  Sun.cpp  Sun.hpp
src/feature/Volumetrics/: VoxelStructure.cpp  VoxelStructure.h  VoxelStructure.hpp
src/feature/glass/: Glass.cpp  Glass.hpp
src/feature/raymarcher/: VoxelGrid.cpp  VoxelGrid.hpp  raymarcher.cpp  raymarcher.hpp  rayscene.cpp  rayscene.hpp
src/feature/water/: WaterSurface.cpp  WaterSurface.hpp
src/rendering/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h
testing/: test.ppm
